# Arcade

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  builder.sh  clang-format.sh
.cache/clangd/index/: AGame.cpp.33FA603DEFC2A7AD.idx  ArcadeError.cpp.99BFC4BB9EA8D90E.idx  ArcadeError.hpp.4A0B2A3C87FCF0AF.idx  Bomb.cpp.3D6C3401093413D0.idx  Bomb.hpp.924C48FFE0D3639B.idx  Clock.cpp.31F0E010B54AEA19.idx  Clock.hpp.A220E53359F14A42.idx  Core.hpp.F67F7EC3981675D1.idx  GameError.cpp.325AD0F34860AA75.idx  GameError.hpp.EAD8D3CEBF9C2B54.idx  GraphicError.cpp.5EAD4F0108D15117.idx  GraphicError.hpp.074E895A8FEDFF96.idx  IGameFactory.hpp.414FBF18957EC9D7.idx  IGraphicFactory.hpp.49227EEE277B1C49.idx  Input.hpp.DE266056EA74C712.idx  Jukebox.cpp.F23D0EE11ADA140C.idx  Jukebox.hpp.62B5498E12C15A78.idx  Loader.cpp.FBB4C6DBE36DE5E9.idx  Loader.hpp.F1B61DF889C4F1C1.idx  Main.cpp.565403A5FA86AD81.idx  Menu.cpp.45195E945F4A3D21.idx  Menu.hpp.95C97DCA46D62515.idx  Missile.cpp.0E975321BA787C70.idx  Missile.hpp.06B6FC842F50B09B.idx  NCursesFactory.cpp.29FBCBFCA6EFF433.idx  NCursesFactory.hpp.AA68219FB0A41FD5.idx  NCursesImage.cpp.3A7E71822E0A0A1D.idx  NCursesImage.hpp.1DF98DF7B9A59A5D.idx  NCursesSound.cpp.A56A3468F49BE621.idx  NCursesSound.hpp.EA01288AB3D15415.idx  NCursesText.cpp.147602A62859D5E2.idx  NCursesText.hpp.DE9FEBB3D1FAC85C.idx  NCursesWindow.cpp.E46F4F408DA46823.idx  NCursesWindow.hpp.BB7A90810BAE8451.idx  NibblerFactory.cpp.CBE212D24107D12D.idx  NibblerFactory.hpp.18A04F0A5F10E12A.idx  NibblerGame.cpp.A06257E94D9B4A68.idx  NibblerGame.hpp.8FEF48F03C17EA93.idx  NibblerMap.cpp.59B207FDAA7B97E3.idx  NibblerMap.hpp.F15012C400CCC19B.idx  (+40 more)
.nibbler/: legend.txt  map.txt  map2.txt
.pacman/: map.txt
.sokoban/: legend.txt  map.txt
doc/: AGame.md  Color.md  Errors.md  FVector.md  Game-Libraries.md  Graphic-Libraries.md  IImage.md  ISound.md  IText.md  IWindow.md  Input.md  Player.md
include/Core/: Clock.hpp  Core.hpp  Input.hpp  Jukebox.hpp  Loader.hpp  Menu.hpp  Player.hpp
include/Error/: ArcadeError.hpp  GameError.hpp  GraphicError.hpp
include/Games/: IGameFactory.hpp
include/Games/Nibbler/: NibblerFactory.hpp  NibblerGame.hpp
include/Games/Nibbler/Map/: NibblerMap.hpp  NibblerMapCase.hpp
include/Games/Nibbler/Snake/: Snake.hpp  SnakeMember.hpp
include/Games/SolarFox/: Bomb.hpp  SolarFoxFactory.hpp  SolarFoxGame.hpp
include/Games/SolarFox/Map/: SolarFoxMap.hpp  SolarFoxMapCase.hpp
include/Games/SolarFox/Spaceship/: Missile.hpp  Spaceship.hpp
include/Libs/: IGraphicFactory.hpp
include/Libs/NCurses/: NCursesFactory.hpp  NCursesImage.hpp  NCursesSound.hpp  NCursesText.hpp  NCursesWindow.hpp
include/Libs/SDL2/: SDLDeleters.hpp  SDLFactory.hpp  SDLImage.hpp  SDLSound.hpp  SDLText.hpp  SDLWindow.hpp
include/Libs/SFML/: SFMLFactory.hpp  SFMLImage.hpp  SFMLSound.hpp  SFMLText.hpp  SFMLWindow.hpp
map/Nibbler/: NibMapOne.txt
map/SolarFox/: SolMapOne.txt
src/Core/: CMakeLists.txt  Clock.cpp  Jukebox.cpp  Loader.cpp  Main.cpp  Menu.cpp  Player.cpp
src/Error/: ArcadeError.cpp  GameError.cpp  GraphicError.cpp
src/Games/: AGame.cpp
src/Games/Nibbler/: CMakeLists.txt  NibblerFactory.cpp  NibblerGame.cpp
src/Games/Nibbler/Map/: NibblerMap.cpp  NibblerMapCase.cpp
src/Games/Nibbler/Snake/: Snake.cpp  SnakeMember.cpp
src/Games/SolarFox/: Bomb.cpp  CMakeLists.txt  SolarFoxFactory.cpp  SolarFoxGame.cpp
src/Games/SolarFox/Map/: SolarFoxMap.cpp  SolarFoxMapCase.cpp
src/Games/SolarFox/Spaceship/: Missile.cpp  Spaceship.cpp
src/Libs/NCurses/: CMakeLists.txt  NCursesFactory.cpp  NCursesImage.cpp  NCursesSound.cpp  NCursesText.cpp  NCursesWindow.cpp
src/Libs/SDL2/: CMakeLists.txt  SDLDeleters.cpp  SDLFactory.cpp  SDLImage.cpp  SDLSound.cpp  SDLText.cpp  SDLWindow.cpp
src/Libs/SFML/: CMakeLists.txt  SFMLFactory.cpp  SFMLImage.cpp  SFMLSound.cpp  SFMLText.cpp  SFMLWindow.cpp
